force-app/main/default/objects/Asset/fields/Added_Special_SPIF__c.field-meta.xml
<CustomField>
    <fullName>Added_Special_SPIF__c</fullName>
    <formula>Spiff_Request__r.Added_Special_SPIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Added Special SPIF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>