force-app/main/default/objects/Asset/fields/additional_Shipping_Info__c.field-meta.xml
<CustomField>
    <fullName>additional_Shipping_Info__c</fullName>
    <label>additional Shipping Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>