force-app/main/default/objects/Asset/fields/BundleItem__c.field-meta.xml
<CustomField>
    <fullName>BundleItem__c</fullName>
    <label>BundleItem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>