force-app/main/default/objects/Asset/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assets (Distributor Account)</relationshipLabel>
    <relationshipName>Assets1</relationshipName>
    <type>Lookup</type>
</CustomField>