force-app/main/default/objects/Asset/fields/End_User_Cleansed__c.field-meta.xml
<CustomField>
    <fullName>End_User_Cleansed__c</fullName>
    <label>End User Cleansed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>