force-app/main/default/objects/Asset/fields/isShipmentData__c.field-meta.xml
<CustomField>
    <fullName>isShipmentData__c</fullName>
    <label>isShipmentData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>