force-app/main/default/objects/Asset/fields/isSpiffClaimed__c.field-meta.xml
<CustomField>
    <fullName>isSpiffClaimed__c</fullName>
    <formula>not(isblank( Spiff_Request__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSpiffClaimed</label>
    <type>Checkbox</type>
</CustomField>