force-app/main/default/objects/Asset/fields/LineIdOracle__c.field-meta.xml
<CustomField>
    <fullName>LineIdOracle__c</fullName>
    <label>LineIdOracle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>