force-app/main/default/objects/Asset/fields/manualPOSAddeed__c.field-meta.xml
<CustomField>
    <fullName>manualPOSAddeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>manualPOSAddeed</label>
    <type>Checkbox</type>
</CustomField>