force-app/main/default/objects/Asset/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <externalId>true</externalId>
    <label>Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>