force-app/main/default/objects/Asset/fields/OrderOracle__c.field-meta.xml
<CustomField>
    <fullName>OrderOracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OrderOracle</label>
    <type>Checkbox</type>
</CustomField>