force-app/main/default/objects/Asset/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <externalId>true</externalId>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>