force-app/main/default/objects/Asset/fields/ProductSeries__c.field-meta.xml
<CustomField>
    <fullName>ProductSeries__c</fullName>
    <label>ProductSeries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>