force-app/main/default/objects/Asset/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <externalId>true</externalId>
    <label>Reseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>