force-app/main/default/objects/Asset/fields/Reseller_Account__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reseller Sold Assets</relationshipLabel>
    <relationshipName>ResellerSoldAssets</relationshipName>
    <type>Lookup</type>
</CustomField>