force-app/main/default/objects/Asset/fields/SerialLine__c.field-meta.xml
<CustomField>
    <fullName>SerialLine__c</fullName>
    <description>Concatenation of Serial Number and  Line Id. This will be the unique id for upsert calls when we add new resellers or updating other columns of data.</description>
    <externalId>true</externalId>
    <label>SerialLine</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>