force-app/main/default/objects/Asset/fields/Spa_Product__c.field-meta.xml
<CustomField>
    <fullName>Spa_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Product</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>