force-app/main/default/objects/Asset/fields/SpaId2__c.field-meta.xml
<CustomField>
    <fullName>SpaId2__c</fullName>
    <label>SpaId2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>