force-app/main/default/objects/Asset/fields/SpaId__c.field-meta.xml
<CustomField>
    <fullName>SpaId__c</fullName>
    <externalId>true</externalId>
    <label>SpaId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>