force-app/main/default/objects/Asset/fields/Spiff_Name__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Name__c</fullName>
    <description>used when uploading spiff csv file to give the spiff name</description>
    <label>Spiff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>