force-app/main/default/objects/Asset/fields/spiffIneligible__c.field-meta.xml
<CustomField>
    <fullName>spiffIneligible__c</fullName>
    <formula>Spa_Product__r.Spiff_Excluded__c ||  Spa_Product__r.Quote.Spiff_InEligible__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>spiffIneligible</label>
    <type>Checkbox</type>
</CustomField>