force-app/main/default/objects/Asset/fields/Standard_SPIF__c.field-meta.xml
<CustomField>
    <fullName>Standard_SPIF__c</fullName>
    <formula>Spiff_Request__r.Per_Unit_Spiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard SPIF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>