force-app/main/default/objects/Asset/fields/Target_Number__c.field-meta.xml
<CustomField>
    <fullName>Target_Number__c</fullName>
    <displayFormat>T-{0000000}</displayFormat>
    <label>Target Number</label>
    <type>AutoNumber</type>
</CustomField>