force-app/main/default/objects/Asset/fields/Total_SPIF__c.field-meta.xml
<CustomField>
    <fullName>Total_SPIF__c</fullName>
    <formula>Spiff_Request__r.Total_SPIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SPIF $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>