force-app/main/default/objects/Asset/fields/TP__c.field-meta.xml
<CustomField>
    <fullName>TP__c</fullName>
    <label>TP</label>
    <length>200</length>
    <type>Text</type>
</CustomField>